// protoc --go_out=. metric.proto
syntax="proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/influxdb/telegraf/plugins/serializers/protobuf";

message field_value {
    oneof value {
        string string_value = 1;
        double float_value = 2;
        int64 int_value = 3;
        bool bool_value = 4;
    }
}

message metric {
    string name = 1;
    map<string, string> tags = 2;
    map<string, field_value> fields = 3;
    google.protobuf.Timestamp timestamp = 4;
}